Got the closure compiler to work (wip)

--- a/sample/app/views/index.scala.html
+++ b/sample/app/views/index.scala.html
@@ -1,7 +1,9 @@
 @(message: String)
 
-@main("Welcome to Play") {
+@main("Welcome to Play", script="hello") {
 
   <div class='dialog'>stuff</div>
 
+  <div id="testing">Stuff</div>
+  
 }
