--- a/sample/app/views/main.scala.html
+++ b/sample/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, script: String)(content: Html)
 
 <!DOCTYPE html>
 
@@ -7,9 +7,10 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
         @content
+        
+        <script src='@routes.Assets.at(s"javascripts/${script}.module.compiled.js")'></script>
     </body>
 </html>
